// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NamedDefinition 1`] = `
{
  "identifier": {
    "_meta": {
      "end": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "kind": "ValueIdentifier",
    "value": "x",
  },
  "kind": "NamedDefinition",
  "typeTag": {
    "identifier": {
      "kind": "TypeIdentifier",
      "value": "number",
    },
    "kind": "TypeTag",
  },
}
`;

exports[`NamedLiteral 1`] = `
{
  "expression": {
    "kind": "NumberLiteral",
    "value": 5,
  },
  "identifier": {
    "_meta": {
      "end": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "kind": "ValueIdentifier",
    "value": "x",
  },
  "kind": "NamedLiteral",
}
`;

exports[`NamedRecordDefinition 1`] = `
{
  "kind": "NamedRecordDefinitionStatement",
  "namedRecordDefinition": {
    "identifier": {
      "kind": "TypeIdentifier",
      "value": "Point",
    },
    "kind": "NamedRecordDefinition",
    "record": {
      "definitions": [
        {
          "identifier": {
            "_meta": {
              "end": {
                "column": 14,
                "line": 1,
                "offset": 13,
              },
              "start": {
                "column": 13,
                "line": 1,
                "offset": 12,
              },
            },
            "kind": "ValueIdentifier",
            "value": "x",
          },
          "kind": "NamedDefinition",
          "typeTag": {
            "identifier": {
              "kind": "TypeIdentifier",
              "value": "number",
            },
            "kind": "TypeTag",
          },
        },
        {
          "identifier": {
            "_meta": {
              "end": {
                "column": 25,
                "line": 1,
                "offset": 24,
              },
              "start": {
                "column": 24,
                "line": 1,
                "offset": 23,
              },
            },
            "kind": "ValueIdentifier",
            "value": "y",
          },
          "kind": "NamedDefinition",
          "typeTag": {
            "identifier": {
              "kind": "TypeIdentifier",
              "value": "number",
            },
            "kind": "TypeTag",
          },
        },
      ],
      "kind": "RecordDefinition",
    },
  },
}
`;

exports[`NamedRecordDefinition.empty 1`] = `
{
  "kind": "NamedRecordDefinitionStatement",
  "namedRecordDefinition": {
    "identifier": {
      "kind": "TypeIdentifier",
      "value": "True",
    },
    "kind": "NamedRecordDefinition",
    "record": {
      "definitions": [],
      "kind": "RecordDefinition",
    },
  },
}
`;

exports[`NamedRecordDefinitionGroup 1`] = `
{
  "identifier": {
    "kind": "TypeIdentifier",
    "value": "Card",
  },
  "kind": "NamedRecordDefinitionGroup",
  "namedRecordDefinitions": [
    {
      "identifier": {
        "kind": "TypeIdentifier",
        "value": "King",
      },
      "kind": "NamedRecordDefinition",
      "record": {
        "definitions": [],
        "kind": "RecordDefinition",
      },
    },
    {
      "identifier": {
        "kind": "TypeIdentifier",
        "value": "Queen",
      },
      "kind": "NamedRecordDefinition",
      "record": {
        "definitions": [],
        "kind": "RecordDefinition",
      },
    },
    {
      "identifier": {
        "kind": "TypeIdentifier",
        "value": "Jack",
      },
      "kind": "NamedRecordDefinition",
      "record": {
        "definitions": [],
        "kind": "RecordDefinition",
      },
    },
    {
      "identifier": {
        "kind": "TypeIdentifier",
        "value": "Number",
      },
      "kind": "NamedRecordDefinition",
      "record": {
        "definitions": [
          {
            "identifier": {
              "_meta": {
                "end": {
                  "column": 19,
                  "line": 5,
                  "offset": 76,
                },
                "start": {
                  "column": 14,
                  "line": 5,
                  "offset": 71,
                },
              },
              "kind": "ValueIdentifier",
              "value": "value",
            },
            "kind": "NamedDefinition",
            "typeTag": {
              "identifier": {
                "kind": "TypeIdentifier",
                "value": "number",
              },
              "kind": "TypeTag",
            },
          },
        ],
        "kind": "RecordDefinition",
      },
    },
  ],
}
`;

exports[`NamedRecordLiteral 1`] = `
{
  "identifier": {
    "kind": "TypeIdentifier",
    "value": "Point",
  },
  "kind": "NamedRecordLiteral",
  "recordLiteral": {
    "definitions": [
      {
        "expression": {
          "kind": "NumberLiteral",
          "value": 5,
        },
        "identifier": {
          "_meta": {
            "end": {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
            "start": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
          },
          "kind": "ValueIdentifier",
          "value": "x",
        },
        "kind": "NamedLiteral",
      },
      {
        "expression": {
          "kind": "NumberLiteral",
          "value": 3,
        },
        "identifier": {
          "_meta": {
            "end": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "start": {
              "column": 13,
              "line": 1,
              "offset": 12,
            },
          },
          "kind": "ValueIdentifier",
          "value": "y",
        },
        "kind": "NamedLiteral",
      },
    ],
    "kind": "RecordLiteral",
  },
}
`;

exports[`NamedRecordLiteral.nestedIdentifier 1`] = `
{
  "identifier": {
    "kind": "NestedTypeIdentifier",
    "path": [
      {
        "kind": "TypeIdentifier",
        "value": "Card",
      },
      {
        "kind": "TypeIdentifier",
        "value": "King",
      },
    ],
  },
  "kind": "NamedRecordLiteral",
  "recordLiteral": {
    "definitions": [
      {
        "expression": {
          "kind": "NumberLiteral",
          "value": 5,
        },
        "identifier": {
          "_meta": {
            "end": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
          },
          "kind": "ValueIdentifier",
          "value": "x",
        },
        "kind": "NamedLiteral",
      },
      {
        "expression": {
          "kind": "NumberLiteral",
          "value": 3,
        },
        "identifier": {
          "_meta": {
            "end": {
              "column": 18,
              "line": 1,
              "offset": 17,
            },
            "start": {
              "column": 17,
              "line": 1,
              "offset": 16,
            },
          },
          "kind": "ValueIdentifier",
          "value": "y",
        },
        "kind": "NamedLiteral",
      },
    ],
    "kind": "RecordLiteral",
  },
}
`;

exports[`NestedTypeIdentifier 1`] = `
{
  "kind": "NestedTypeIdentifier",
  "path": [
    {
      "kind": "TypeIdentifier",
      "value": "Card",
    },
    {
      "kind": "TypeIdentifier",
      "value": "King",
    },
  ],
}
`;

exports[`RecordDefinition 1`] = `
{
  "definitions": [
    {
      "identifier": {
        "_meta": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "kind": "ValueIdentifier",
        "value": "x",
      },
      "kind": "NamedDefinition",
      "typeTag": {
        "identifier": {
          "kind": "TypeIdentifier",
          "value": "number",
        },
        "kind": "TypeTag",
      },
    },
    {
      "identifier": {
        "_meta": {
          "end": {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
          "start": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
        },
        "kind": "ValueIdentifier",
        "value": "y",
      },
      "kind": "NamedDefinition",
      "typeTag": {
        "identifier": {
          "kind": "TypeIdentifier",
          "value": "number",
        },
        "kind": "TypeTag",
      },
    },
  ],
  "kind": "RecordDefinition",
}
`;

exports[`RecordLiteral 1`] = `
{
  "definitions": [
    {
      "expression": {
        "kind": "NumberLiteral",
        "value": 5,
      },
      "identifier": {
        "_meta": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "kind": "ValueIdentifier",
        "value": "x",
      },
      "kind": "NamedLiteral",
    },
    {
      "expression": {
        "kind": "NumberLiteral",
        "value": 3,
      },
      "identifier": {
        "_meta": {
          "end": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
          "start": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
        },
        "kind": "ValueIdentifier",
        "value": "y",
      },
      "kind": "NamedLiteral",
    },
  ],
  "kind": "RecordLiteral",
}
`;

exports[`RecordLiteral.long 1`] = `
{
  "definitions": [
    {
      "expression": {
        "kind": "NumberLiteral",
        "value": 3,
      },
      "identifier": {
        "_meta": {
          "end": {
            "column": 8,
            "line": 2,
            "offset": 9,
          },
          "start": {
            "column": 5,
            "line": 2,
            "offset": 6,
          },
        },
        "kind": "ValueIdentifier",
        "value": "num",
      },
      "kind": "NamedLiteral",
    },
    {
      "expression": {
        "definitions": [
          {
            "expression": {
              "kind": "NumberLiteral",
              "value": 2,
            },
            "identifier": {
              "_meta": {
                "end": {
                  "column": 10,
                  "line": 4,
                  "offset": 34,
                },
                "start": {
                  "column": 7,
                  "line": 4,
                  "offset": 31,
                },
              },
              "kind": "ValueIdentifier",
              "value": "num",
            },
            "kind": "NamedLiteral",
          },
          {
            "expression": {
              "kind": "StringLiteral",
              "value": "this",
            },
            "identifier": {
              "_meta": {
                "end": {
                  "column": 10,
                  "line": 5,
                  "offset": 48,
                },
                "start": {
                  "column": 7,
                  "line": 5,
                  "offset": 45,
                },
              },
              "kind": "ValueIdentifier",
              "value": "str",
            },
            "kind": "NamedLiteral",
          },
          {
            "expression": {
              "kind": "BooleanLiteral",
              "value": true,
            },
            "identifier": {
              "_meta": {
                "end": {
                  "column": 11,
                  "line": 6,
                  "offset": 68,
                },
                "start": {
                  "column": 7,
                  "line": 6,
                  "offset": 64,
                },
              },
              "kind": "ValueIdentifier",
              "value": "bool",
            },
            "kind": "NamedLiteral",
          },
          {
            "expression": {
              "definitions": [
                {
                  "expression": {
                    "kind": "NumberLiteral",
                    "value": 3,
                  },
                  "identifier": {
                    "_meta": {
                      "end": {
                        "column": 14,
                        "line": 7,
                        "offset": 89,
                      },
                      "start": {
                        "column": 13,
                        "line": 7,
                        "offset": 88,
                      },
                    },
                    "kind": "ValueIdentifier",
                    "value": "x",
                  },
                  "kind": "NamedLiteral",
                },
                {
                  "expression": {
                    "kind": "NumberLiteral",
                    "value": 3,
                  },
                  "identifier": {
                    "_meta": {
                      "end": {
                        "column": 20,
                        "line": 7,
                        "offset": 95,
                      },
                      "start": {
                        "column": 19,
                        "line": 7,
                        "offset": 94,
                      },
                    },
                    "kind": "ValueIdentifier",
                    "value": "y",
                  },
                  "kind": "NamedLiteral",
                },
              ],
              "kind": "RecordLiteral",
            },
            "identifier": {
              "_meta": {
                "end": {
                  "column": 10,
                  "line": 7,
                  "offset": 85,
                },
                "start": {
                  "column": 7,
                  "line": 7,
                  "offset": 82,
                },
              },
              "kind": "ValueIdentifier",
              "value": "rec",
            },
            "kind": "NamedLiteral",
          },
        ],
        "kind": "RecordLiteral",
      },
      "identifier": {
        "_meta": {
          "end": {
            "column": 8,
            "line": 3,
            "offset": 21,
          },
          "start": {
            "column": 5,
            "line": 3,
            "offset": 18,
          },
        },
        "kind": "ValueIdentifier",
        "value": "rec",
      },
      "kind": "NamedLiteral",
    },
  ],
  "kind": "RecordLiteral",
}
`;
